...
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_ingredients">

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/step_list"
            android:name="eu.rodrigocamara.bakingapp.StepListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/card_view"
            android:layout_centerHorizontal="true"
            app:layoutManager="LinearLayoutManager"
            tools:context="eu.rodrigocamara.bakingapp.activities.StepListActivity"
            tools:listitem="@layout/step_list_content" />
    </RelativeLayout>

...
